# thread_safe_clean_architechture

./: Cargo.toml  README.md  users.json
src/: lib.rs  main.rs
src/adapter/: mod.rs
src/adapter/contoroller/user_controller/: mod.rs
src/adapter/repository/: mod.rs
src/adapter/repository/json_user_repository/: mod.rs
src/adapter/utils/: mod.rs
src/adapter/utils/uuid_generotor/: mod.rs
src/api/: mod.rs
src/api/actix/: mod.rs
src/api/schema/: mod.rs
src/application/dto/user/: mod.rs
src/application/dto/user/create_user_request_dto/: mod.rs
src/application/dto/user/create_user_response_dto/: mod.rs
src/application/use_cases/user/: mod.rs
src/application/use_cases/user/create_user_usecase/: mod.rs
src/application/use_cases/user/create_user_usecase_interface/: mod.rs
src/domain/: mod.rs
src/domain/entity/user/: mod.rs
src/domain/repository/: mod.rs
src/domain/repository/user_repository_interface/: mod.rs
src/domain/utils/: mod.rs
src/domain/utils/id_generator_interaface/: mod.rs
src/infrastructure/cli/: mod.rs
src/state/app_store/: mod.rs
